# FermiBreakUp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake.in  Dockerfile  G4FermiBreakUp.cc  G4FermiBreakUp.hh  G4FermiSplitter.cc  G4FermiSplitter.hh  ParseTableValues.py  README.md  Visualizer.py  main.cpp  nuclear_data.csv
COLA/: CMakeLists.txt
COLA/data/: FermiModuleConfig.cmake.in  G4HandlerModuleConfig.cmake.in
COLA/include/: FermiBreakUpModule.hh  FermiConverter.h  FermiFactory.h  FermiFactory.hh  FermiFilter.hh  G4HandlerConverter.h  G4HandlerFactory.h  G4HandlerModule.h
COLA/src/: FermiConverter.cpp  FermiFactory.cpp  FermiFilter.cpp  G4HandlerConverter.cpp  G4HandlerFactory.cpp
COLA/test/: CMakeLists.txt  test.cpp
COLA/test/data/: config.xml
FermiBreakUp/: CMakeLists.txt  Config.cmake.in  FermiBreakUp.cpp  FermiBreakUp.h  FermiParticle.cpp  FermiParticle.h  FermiSplit.cpp  FermiSplit.h  Particle.cpp  Particle.h  Split.cpp  Split.h  Splitter.cpp  Splitter.h  VConfigurations.cpp  VConfigurations.h  VFermiBreakUp.cpp  VFermiBreakUp.h  VFermiConfigurations.cpp  VFermiConfigurations.h
FermiBreakUp/Configurations/: CachedConfigurations.cpp  CachedConfigurations.h  Configurations.cpp  Configurations.h  FastConfigurations.cpp  FastConfigurations.h  FastFermiConfigurations.cpp  FastFermiConfigurations.h  FermiConfigurations.cpp  FermiConfigurations.h
FermiBreakUp/FragmentPool/: FermiFragmentPool.h  FragmentPool.h  FragmentsStorage.cpp  FragmentsStorage.h
FermiBreakUp/FragmentPool/DataSource/: DefaultPoolSource.cpp  DefaultPoolSource.h
FermiBreakUp/FragmentPool/Fragments/: B9Fragment.cpp  B9Fragment.h  Be8FermiFragment.cpp  Be8Fragment.cpp  Be8Fragment.h  Fragment.cpp  Fragment.h  He5Fragment.cpp  He5Fragment.h  Li5FermiFragment.h  Li5Fragment.cpp  Li5Fragment.h  StableFermiFragment.cpp  StableFermiFragment.h  StableFragment.cpp  StableFragment.h  UnstableFragment.cpp  UnstableFragment.h
FermiBreakUp/PhaseDecay/: Decay.cpp  Decay.h  FermiPhaseSpaceDecay.h  KopylovDecay.cpp  KopylovDecay.h  VDecay.cpp  VDecay.h
FermiBreakUp/TableValues/: NucleiPropertiesTable.cpp  NucleiPropertiesTable.h  NucleiPropertiesTableAME12.cpp  NucleiPropertiesTableAME12.h
FermiBreakUp/Test/: BreakUpTest.cpp  CMakeLists.txt  PartitionTest.cpp  TableTests.cpp
FermiBreakUp/Utilities/: ConfigurationProperties.cpp  ConfigurationProperties.h  DataTypes.cpp  DataTypes.h  IntegerPartition.cpp  IntegerPartition.h  Randomizer.cpp  Randomizer.h  Singleton.h  logger.cpp  logger.h
FermiBreakUp/Utilities/NucleiProperties/: NucleiProperties.h  VNucleiProperties.cpp  VNucleiProperties.h
FermiBreakUp/Utilities/nuclei_properties/: NucleiProperties.h  VNucleiProperties.cpp  VNucleiProperties.h
FermiBreakUp/configurations/: Split.cpp  Split.h  VConfigurations.h
FermiBreakUp/configurations/impl/: CachedConfigurations.cpp  CachedConfigurations.h  Configurations.cpp  Configurations.h  FastConfigurations.cpp  FastConfigurations.h
FermiBreakUp/fragment_pool/: FragmentPool.h  FragmentsStorage.cpp  FragmentsStorage.h
FermiBreakUp/fragment_pool/data_source/: DefaultPoolSource.cpp  DefaultPoolSource.h
FermiBreakUp/nuclei_properties/: NucleiProperties.h  VNucleiProperties.h
FermiBreakUp/phase_decay/: Decay.cpp  Decay.h  FermiPhaseSpaceDecay.h  Helper.cpp  Helper.h  KopylovDecay.cpp  KopylovDecay.h  KopylovPhaseDecay.cpp  KopylovPhaseDecay.h  VDecay.cpp  VDecay.h  VPhaseDecay.h
FermiBreakUp/table_values/: NucleiPropertiesTable.cpp  NucleiPropertiesTable.h  NucleiPropertiesTableAME12.cpp  NucleiPropertiesTableAME12.h
FermiBreakUp/tests/: BreakUpTest.cpp  CMakeLists.txt  PartitionTest.cpp  SplitTest.cpp  TableTests.cpp
FermiBreakUp/util/: Cache.h  DataTypes.cpp  DataTypes.h  IntegerPartition.cpp  IntegerPartition.h  Logger.cpp  Logger.h  Particle.cpp  Particle.h  Randomizer.cpp  Randomizer.h  Singleton.h
Handler/: AAMCCFermiBreakUp.cpp  AAMCCFermiBreakUp.h  AamccFermiBreakUpFunc.cpp  AamccFermiBreakUpFunc.h  CMakeLists.txt  ExcitationHandler.cpp  ExcitationHandler.h
Handler/Test/: CMakeLists.txt  ConservationTest.cpp
MyFermiBreakUp/: AAMCCFermiBreakUp.cpp  AAMCCFermiBreakUp.h  CMakeLists.txt  CachedFermiConfigurations.cpp  CachedFermiConfigurations.h  FastFermiConfiguration.cpp  FastFermiConfiguration.h  FermiBreakUp.cpp  FermiBreakUp.h  FermiConfigurations.cpp  FermiConfigurations.h  FermiFragmentPool.cpp  FermiFragmentPool.h  FermiParticle.cpp  FermiParticle.h  FermiSplit.cpp  FermiSplit.h  IntegerPartition.cpp  IntegerPartition.h  VFermiBreakUp.cpp  VFermiBreakUp.h  VFermiConfigurations.h
MyFermiBreakUp/Configurations/: CachedFermiConfigurations.cpp  CachedFermiConfigurations.h
MyFermiBreakUp/FragmentPool/: FermiFragmentPool.cpp  FermiFragmentPool.h  FragmentsStorage.cpp  FragmentsStorage.h
MyFermiBreakUp/Fragments/: B9FermiFragment.cpp  B9FermiFragment.h  Be8FermiFragment.cpp  Be8FermiFragment.h  FermiFragment.cpp  FermiFragment.h  FragmentTable.h  He5FermiFragment.cpp  He5FermiFragment.h  Li5FermiFragment.cpp  Li5FermiFragment.h  StableFermiFragment.cpp  StableFermiFragment.h  UnstableFermiFragment.cpp  UnstableFermiFragment.h
MyFermiBreakUp/PhaseDecay/: Decay.cpp  Decay.h  KopylovDecay.cpp  VDecay.cpp
MyFermiBreakUp/TableValues/: NucleiPropertiesTable.cpp  NucleiPropertiesTable.h  NucleiPropertiesTableAME12.cpp  NucleiPropertiesTableAME12.h
MyFermiBreakUp/Test/: BreakUpTest.cpp  CMakeLists.txt  CachedBreakUpTest.cpp  LRUTest.cpp  PartitionTest.cpp  TableTests.cpp
MyFermiBreakUp/Utilities/: ConfigurationProperties.cpp  ConfigurationProperties.h  DataTypes.cpp  DataTypes.h  Decay.cpp  FermiPhaseSpaceDecay.h  IntegerPartition.cpp  IntegerPartition.h  KopylovDecay.h  LRUCache.h  NucleiProperties.cpp  NucleiProperties.h  Randomizer.cpp  Randomizer.h
Test/: CMakeLists.txt  ConservationTest.cpp
runner/: CMakeLists.txt  ParseTableValues.py  Visualizer.py  main.cpp
tests/: BreakUpTest.cpp  CMakeLists.txt  G4FermiBreakUpTest.cc  G4FermiPartitionTest.cc  G4FermiSplitTest.cc  G4FermiTableTests.cc  PartitionTest.cpp  SplitTest.cpp  TableTests.cpp
(+177 files in other folders)
